Preserve optional and Unicode reward lookup semantics